project-orion/deployment/kustomize/regions/us-west-2/replica_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orion-api
spec:
  replicas: 2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orion-worker
spec:
  replicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orion-scheduler
spec:
  replicas: 1
